fix of style on mobile screens

--- a/src/styles/general/_base.scss
+++ b/src/styles/general/_base.scss
@@ -74,7 +74,7 @@ html {
 }
 
 .container {
-  height: 100%;
+  height: 100vh;
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
